# learning-platform

./: .dockerignore  .env.example  .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
core/: __init__.py  celery.py  envs.py  settings.py  urls.py
course_catalog/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
course_catalog/migrations/: 0001_initial.py
course_catalog/serializers/: course_access.py  course_access_serializers.py  statistic.py
course_catalog/services/: course.py  courses_access.py  courses_access_service.py  courses_statistic.py  courses_statistic_service.py  get_db.py
course_catalog/views/: courses_access.py  courses_access_view.py  courses_statistic.py  courses_statistic_view.py
courses/: admin.py  apps.py  models.py  urls.py
courses/migrations/: 0001_initial.py
courses/serializers/: access.py  lesson.py  statistic.py
courses/services/: _statistic.py  course.py  courses_statistic.py  statistic.py
courses/views/: access.py  courses_access.py  courses_statistic.py  lesson.py  statistic.py
educational_content/: admin.py  choices.py  models.py  serializers.py  tasks.py  urls.py  views.py
educational_content/migrations/: 0001_initial.py
educational_content/serializers/: lesson.py  lesson_with_info.py  lessons.py  lessons_serializers.py  lessons_with_info_serializers.py  read.py  write.py
educational_content/services/: crud.py  get_db.py
educational_content/views/: lesson.py  lesson_views.py  (+4 more)
lessons/: admin.py  apps.py  choices.py  models.py  tasks.py  urls.py
(+7 files in other folders)
