[project]
name = "learning-platform"
version = "0.1.0"
description = ""
authors = [
    { name = "DorLex", email = "dorozhinskiysanya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "celery[amqp,redis] (>=5.5.3,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
